--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,19 +27,29 @@ repos:
 
   - repo: local
     hooks:
-      - id: update-helm-snapshots
-        name: update-helm-snapshots
+      - id: helm-lint
+        name: helm-lint
+        description: Helm lint
         language: system
-        entry: bash ./hack/update-helm-snapshots.sh
-        files: ^(charts/.*|hack/update-helm-snapshots.sh$)
+        entry: make -C chart lint
         pass_filenames: false
+        files: ^chart/
 
-      - id: update-deployment-yamls
-        name: update-deployment-yamls
+      - id: helm-snapshots
+        name: update-helm-snapshots
+        description: Update Helm snapshots
         language: system
-        entry: bash ./hack/update-deployment-yamls.sh
-        files: ^(charts/.*|hack/update-deployment-yamls.sh$)
+        entry: make -C chart snapshots
         pass_filenames: false
+        files: ^chart/
+
+      - id: deploy-manifests
+        name: update-deploy-manifests
+        description: Update deploy manifests
+        language: system
+        entry: make -C chart deploy-manifests
+        pass_filenames: false
+        files: ^(chart/|deploy/)
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
