--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,13 @@ jobs:
             helm
           helm: v3.19.2 # renovate: datasource=github-releases depName=helm/helm
 
+      - uses: actions/cache@v4
+        with:
+          path: ~/.cache/golangci-lint
+          key: pre-commit-golangci-lint|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}|${{ hashFiles('**/*.go') }}
+          restore-keys: |
+            pre-commit-golangci-lint|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}|
+            pre-commit-golangci-lint|${{ env.pythonLocation }}|
+            pre-commit-golangci-lint|
+
       - uses: pre-commit/action@v3.0.1
