fix: missing volumeattributesclasses permissions for csi-resizer

--- a/chart/.snapshots/default.yaml
+++ b/chart/.snapshots/default.yaml
@@ -80,6 +80,9 @@ rules:
   - apiGroups: [""]
     resources: [pods]
     verbs: [get, list, watch]
+  - apiGroups: ["storage.k8s.io"]
+    resources: ["volumeattributesclasses"]
+    verbs: ["get", "list", "watch"]
   # node
   - apiGroups: [""]
     resources: [events]
