--- a/chart/templates/controller/clusterrole.yaml
+++ b/chart/templates/controller/clusterrole.yaml
@@ -65,6 +65,9 @@ rules:
   - apiGroups: [""]
     resources: [pods]
     verbs: [get, list, watch]
+  - apiGroups: ["storage.k8s.io"]
+    resources: ["volumeattributesclasses"]
+    verbs: ["get", "list", "watch"]
   # node
   - apiGroups: [""]
     resources: [events]
