--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -70,6 +70,9 @@ linters:
           - revive
         path: internal/utils/.+\.go
         text: var-naming
+      - linters:
+          - revive
+        text: "var-naming: avoid package names that conflict with Go standard library package names"
 
 formatters:
   enable:
